# web-development-course-eldar

2026-03-05 Flask2/: pyproject.toml
2026-03-05 Flask2/app/: service.py
2026-03-05-Flask/: pyproject.toml
2026-03-05-Flask/web/: app.py
2026-03-05-Flask/web/templates/: home.html
2026-03-09-students-app/: pyproject.toml
2026-03-09-students-app/app/: controller.py  db.py  service.py
2026-03-09-students-app/app/static/: index.html  main.js  style.css
2026-03-09-students-app/tests/: test_service.py
2026-03-19 mockups/: demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6_homework.py  pyproject.toml
2026-03-23-homework_solution/: pyproject.toml
2026-03-23-homework_solution/app/: location_mockup.py  locations.py
2026-03-23-mock/: pyproject.toml
2026-03-23-mock/app/: weather_api_client.py  weather_service.py
2026-03-23-mock/demos/: demo1.py  demo2_asserts.py  demo3_asserts.py
2026-03-23-mock/tests/: weather_service_mock.py  weather_service_patch.py
2026-03-26 testing with pytest/: pyproject.toml  test_demo1.py  test_demo2.py
2026-03-30 - pytest/: pyproject.toml
2026-03-30 - pytest advanced/: pyproject.toml
2026-03-30 - pytest advanced/a/: test_demo1.py
2026-03-30 - pytest advanced/tests/: test_orders.py  test_payment.py
2026-03-30 - pytest advanced/tests_2/: demo1.py  demo2.py  demo3.py  test_demo1.py
2026-03-30 - pytest advanced/tests_3/: test_demo1.py  test_demo2.py
2026-03-30 - pytest/a/: test_using_pytest.py  test_using_unittest.py
