[project]
name = "2026-03-30-pytest-advanced"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = ["pytest"]

# test markers
[tool.pytest.ini_options]
markers = [
    "functional: functional tests that verfy app behavior",
    "performance: performance or load-related tests"
]

